[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Alexander Skjold Jasper <askjoldjasper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
dijkstar = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
